# aVer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  cli.py  client.py  diff.py  install.sh  interactive.py  manifest.py  phi_bridge.py  pyproject.toml  setup.cfg  version_store.py
bridges/: claude_code_bridge.py  hermes_bridge.py  opencode_bridge.py  phi_bridge.py  zen_bridge.py
experiments/H1-agent-config-manifest/code/: test_manifest.py
experiments/H2-env-promotion/code/: test_client.py  test_pipeline.py
paper/: paper.html  paper.md
src/: cli.py  client.py  hermes_bridge.py  make_paper.py  manifest.py  version_store.py
