[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aver"
version = "0.1.0"
description = "Version control for AI agent configurations across Hermes, Claude Code, OpenCode, Zen, and Phi"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["agent", "versioning", "config", "ai", "cli"]
authors = [
    {name = "aver contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
]

dependencies = ["pyyaml"]

[project.urls]
Homepage = "https://github.com/hrshx3o5o6/aVer"
Repository = "https://github.com/hrshx3o5o6/aVer"

[project.scripts]
aver = "cli:main"
